--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Camera PIXI Tests</title>
+  <title>PIXI Game Camera Custom Tests</title>
 
   <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css">
 </head>
@@ -21,7 +21,7 @@
 
   <script>mocha.setup('bdd')</script>
 
-  <script type="module" src="./camera-pixijs.test.js"></script>
+  <script type="module" src="./pixi-game-camera.test.js"></script>
 
   <script type="module">
     mocha.checkLeaks();
